@@ -1,5 +1,6 @@
 2.1.0 2012-??-??
  * fixes #972: warning/error when XCache is loaded incorrectly
+ * fixes #73: warn for improper PHP_FCGI_CHILDREN setting fcgi mode
 
 2.0.1 2012-07-14
 ChangeLog
